--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<input type="text" id="query"/>
 		<input type="submit" value="Submit" id="search"/>
 
-		<p id="result"></p>
+		<div id="result"></div>
 	</body>
 </html>
