--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title> Definition </title>
@@ -7,7 +8,8 @@
 
 	<body>
 		<input type="text" id="query"/>
-		<input type="submit" value="Submit" id="search"/>
+		<input type="submit" value="Search" id="search"/>
+		<input type="submit" value="Get All Definitions" id="alldefs"/>
 
 		<div id="result"></div>
 	</body>
